--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 ELASTICSEARCH_URL=http://elasticsearch:9200
 AZURE_AI_API_KEY=your_azure_ai_api_key
 AZURE_AI_ENDPOINT=https://your-endpoint.openai.azure.com/
+AZURE_AI_DEPLOYMENT=my_deployment
 AZURE_AI_MODEL=gpt-4
 OPENAI_API_KEY=your_openai_api_key_optional
 OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317
