Update docker compose to align with new cli

--- a/.env.external-es.example
+++ b/.env.external-es.example
@@ -3,7 +3,8 @@ ELASTICSEARCH_URL=https://your-elasticsearch-cluster.com:9200
 ELASTICSEARCH_API_KEY=your_elasticsearch_api_key
 AZURE_AI_API_KEY=your_azure_ai_api_key
 AZURE_AI_ENDPOINT=https://your-endpoint.openai.azure.com/
-AZURE_AI_DEPLOYMENT=my_deploymentAZURE_AI_MODEL=gpt-4
+AZURE_AI_DEPLOYMENT=my_deployment
+AZURE_AI_MODEL=gpt-4
 OPENAI_API_KEY=your_openai_api_key_optional
 OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317
 OTEL_SERVICE_NAME=elasticsearch-ai-backend
