--- a/docker-compose.external-es.yml
+++ b/docker-compose.external-es.yml
@@ -11,6 +11,7 @@ services:
       - ELASTICSEARCH_API_KEY=${ELASTICSEARCH_API_KEY}
       - AZURE_AI_API_KEY=${AZURE_AI_API_KEY}
       - AZURE_AI_ENDPOINT=${AZURE_AI_ENDPOINT}
+      - AZURE_AI_DEPLOYMENT=${AZURE_AI_DEPLOYMENT}
       - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT:-http://otel-collector:4317}
       - OTEL_SERVICE_NAME=elasticsearch-ai-backend
     ports:
