--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,12 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24"
   },
+  "overrides": {
+    "react-json-view": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
