--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "axios": "^1.6.0",
     "react-json-view": "^1.21.3",
     "@opentelemetry/api": "^1.7.0",
-    "@opentelemetry/sdk-web": "^1.17.0",
+    "@opentelemetry/sdk-trace-web": "^1.17.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.45.0",
     "@opentelemetry/instrumentation": "^0.45.0",
     "@opentelemetry/instrumentation-fetch": "^0.45.0",
