--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 elasticsearch==8.11.0
 openai==1.3.5
+aiohttp==3.12.15
 python-multipart==0.0.6
 python-dotenv==1.0.0
 httpx==0.25.2
