--- a/.env.external-es.example
+++ b/.env.external-es.example
@@ -8,4 +8,6 @@ AZURE_AI_MODEL=gpt-4
 OPENAI_API_KEY=your_openai_api_key_optional
 OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317
 OTEL_SERVICE_NAME=elasticsearch-ai-backend
+OTEL_COLLECTOR_EXPORTER_OTLP=http://localhost:8200
+OTEL_EXPORTER_OTLP_HEADERS=Authorization=Bearer somesecret
 MAPPING_CACHE_INTERVAL_MINUTES=30
