--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -14,18 +14,21 @@ exporters:
     loglevel: debug
   prometheus:
     endpoint: "0.0.0.0:8889"
+  otlp:
+    endpoint: "${env:OTEL_COLLECTOR_EXPORTER_OTLP}"
+    
 
 service:
   pipelines:
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [logging]
+      exporters: [otlp]
     metrics:
       receivers: [otlp]
       processors: [batch]
-      exporters: [logging, prometheus]
+      exporters: [otlp, prometheus]
     logs:
       receivers: [otlp]
       processors: [batch]
-      exporters: [logging]
+      exporters: [otlp]
