--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,6 +2,7 @@ server {
     listen 3000;
     root /usr/share/nginx/html;
     index index.html index.htm;
+    include /etc/nginx/mime.types;
 
     location / {
         try_files $uri $uri/ /index.html;
