--- a/docker-compose.external-es.yml
+++ b/docker-compose.external-es.yml
@@ -40,7 +40,7 @@ services:
       - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml
     environment:
       - OTEL_COLLECTOR_EXPORTER_OTLP=${OTEL_COLLECTOR_EXPORTER_OTLP:-http://localhost:8200}
-      - OTEL_EXPORTER_OTLP_HEADERS=${OTEL_EXPORTER_OTLP_HEADERS:-Authorization=Bearer SomeSecret}
+      - ELASTIC_APM_SECRET_TOKEN=${ELASTIC_APM_SECRET_TOKEN:-SomeSecret}
     ports:
       - "4317:4317"   # OTLP gRPC receiver
       - "4318:4318"   # OTLP HTTP receiver
