--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -13,20 +13,23 @@ exporters:
   prometheus:
     endpoint: "0.0.0.0:8889"
   otlp:
+    # Elastic APM server https endpoint without the "https://" prefix
     endpoint: "${env:OTEL_COLLECTOR_EXPORTER_OTLP}"
-    
+    headers:
+      # Elastic APM Server secret token
+      Authorization: "Bearer ${env:ELASTIC_APM_SECRET_TOKEN}"
 
 service:
   pipelines:
     traces:
       receivers: [otlp]
-      processors: [batch]
+      processors: [memory_limiter, batch]
       exporters: [otlp]
     metrics:
       receivers: [otlp]
-      processors: [batch]
+      processors: [memory_limiter, batch]
       exporters: [otlp, prometheus]
     logs:
       receivers: [otlp]
-      processors: [batch]
+      processors: [memory_limiter, batch]
       exporters: [otlp]
