tweak health route

--- a/.env.external-es.example
+++ b/.env.external-es.example
@@ -10,4 +10,5 @@ OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317
 OTEL_SERVICE_NAME=elasticsearch-ai-backend
 OTEL_COLLECTOR_EXPORTER_OTLP=http://localhost:8200
 OTEL_EXPORTER_OTLP_HEADERS=Authorization=Bearer somesecret
+REACT_OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
 MAPPING_CACHE_INTERVAL_MINUTES=30
