--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,5 @@ AZURE_AI_MODEL=gpt-4
 OPENAI_API_KEY=your_openai_api_key_optional
 OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317
 OTEL_SERVICE_NAME=elasticsearch-ai-backend
+REACT_OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
 MAPPING_CACHE_INTERVAL_MINUTES=30
