--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,15 @@
     "react-json-view": "^1.21.3",
     "@opentelemetry/api": "^1.7.0",
     "@opentelemetry/sdk-trace-web": "^1.17.0",
+    "@opentelemetry/sdk-trace-base": "^1.17.0",
+    "@opentelemetry/propagator-b3": "^1.17.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.45.0",
     "@opentelemetry/instrumentation": "^0.45.0",
     "@opentelemetry/instrumentation-fetch": "^0.45.0",
     "@opentelemetry/instrumentation-xml-http-request": "^0.45.0",
+    "@opentelemetry/auto-instrumentations-web": "^0.45.0",
+    "@opentelemetry/instrumentation-document-load": "^0.45.0",
+    "@opentelemetry/instrumentation-user-interaction": "^0.45.0",
     "lucide-react": "^0.263.1",
     "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.14",
