--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,12 @@
     "@opentelemetry/resources": "^1.7.0",
     "@opentelemetry/sdk-trace-web": "^1.17.0",
     "@opentelemetry/sdk-trace-base": "^1.17.0",
+    "@opentelemetry/sdk-metrics": "^1.17.0",
     "@opentelemetry/propagator-b3": "^1.17.0",
     "@opentelemetry/context-zone": "^1.17.0",
     "@opentelemetry/semantic-conventions": "^1.17.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.45.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.45.0",
     "@opentelemetry/instrumentation": "^0.45.0",
     "@opentelemetry/instrumentation-fetch": "^0.45.0",
     "@opentelemetry/instrumentation-xml-http-request": "^0.45.0",
