--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "react-json-view": "^1.21.3",
     "@opentelemetry/api": "^1.7.0",
     "@opentelemetry/resources": "^1.7.0",
+    "@opentelemetry/sdk-node": "^1.17.0",
+    "@opentelemetry/sdk-trace-node": "^1.17.0",
     "@opentelemetry/sdk-trace-web": "^1.17.0",
     "@opentelemetry/sdk-trace-base": "^1.17.0",
     "@opentelemetry/sdk-metrics": "^1.17.0",
@@ -25,6 +27,7 @@
     "@opentelemetry/instrumentation-fetch": "^0.45.0",
     "@opentelemetry/instrumentation-xml-http-request": "^0.45.0",
     "@opentelemetry/auto-instrumentations-web": "^0.45.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.45.0",
     "@opentelemetry/instrumentation-document-load": "^0.45.0",
     "@opentelemetry/instrumentation-user-interaction": "^0.45.0",
     "lucide-react": "^0.263.1",
