--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "https-browserify": "^1.0.0",
     "os": "^0.1.2",
     "os-browserify": "^0.3.0",
+    "process":"0.11.10",
     "react-app-rewired": "^2.1.9",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
