--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "os": "^0.1.2",
     "os-browserify": "^0.3.0",
     "process":"0.11.10",
+    "url": "0.11.4",
     "react-app-rewired": "^2.1.9",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
