--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,12 @@
     "https-browserify": "^1.0.0",
     "os": "^0.1.2",
     "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "url": "^0.11.0",
+    "util": "^0.12.5",
+    "buffer": "^6.0.3",   
     "process":"0.11.10",
-    "url": "0.11.4",
+    "crypto-browserify": "^3.12.0",
     "react-app-rewired": "^2.1.9",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
