--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,10 @@
     "buffer": "^6.0.3",
     "process":"0.11.10",
     "crypto-browserify": "^3.12.0",
-    "react-app-rewired": "^2.1.9",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "querystring-es3": "^0.2.1",
+    "react-app-rewired": "^2.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
