--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "process":"0.11.10",
+    "http2": "^0.3.7",
     "crypto-browserify": "^3.12.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
