--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
     "path-browserify": "^1.0.1",
     "url": "^0.11.0",
     "util": "^0.12.5",
+    "timers-browserify": "^2.0.12",
+    "console-browserify": "^1.2.0",
+    "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "process":"0.11.10",
     "crypto-browserify": "^3.12.0",
