--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,10 @@
     "react-json-view": "^1.21.3",
     "@opentelemetry/api": "^1.7.0",
     "@opentelemetry/resources": "^2.0.0",
+    "@opentelemetry/resource-detector-docker": "^2.0.0",
+    "@opentelemetry/resource-detector-process": "^2.0.0",
+    "@opentelemetry/resource-detector-env": "^2.0.0",
+    "@opentelemetry/sdk-logs": "^2.0.0",
     "@opentelemetry/sdk-trace-node": "^2.0.0",
     "@opentelemetry/sdk-trace-web": "^2.0.0",
     "@opentelemetry/sdk-trace-base": "^2.0.0",
