--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "axios": "^1.6.0",
+    "react-json-view": "^1.21.3",
     "@opentelemetry/api": "^1.7.0",
     "@opentelemetry/resources": "^2.0.0",
     "@opentelemetry/resource-detector-docker": "^0.1.2",
@@ -37,8 +38,8 @@
     "@opentelemetry/propagator-b3": "^2.0.0",
     "@opentelemetry/context-zone": "^2.0.0",
     "@opentelemetry/semantic-conventions": "^1.36.0",
-    "@opentelemetry/sdk-logs": "^0.203.0",
     "@opentelemetry/sdk-node": "^0.203.0",
+    "@opentelemetry/sdk-logs": "^0.203.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.200.0",
     "@opentelemetry/exporter-metrics-otlp-http": "^0.200.0",
     "@opentelemetry/instrumentation": "^0.200.0",
@@ -53,6 +54,12 @@
     "autoprefixer": "^10.4.14",
     "react-json-view-lite": "^2.4.2",
     "postcss": "^8.4.24"
+  },
+    "overrides": {
+    "react-json-view": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
   },
   "scripts": {
     "start": "react-app-rewired start",
