Update config to improve build time

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,6 +10,7 @@ RUN npm install
 COPY . .
 
 # Build the app
+RUN npm install -D compression-webpack-plugin terser-webpack-plugin
 RUN npm run build
 
 # Production stage
