--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,7 @@
     "react-json-view": "^1.21.3",
     "@opentelemetry/api": "^1.7.0",
     "@opentelemetry/resources": "^2.0.0",
-    "@opentelemetry/resource-detector-docker": "^0.1.2",
+    "@opentelemetry/resource-detector-docker": "^0.7.0",
     "@opentelemetry/sdk-trace-node": "^2.0.0",
     "@opentelemetry/sdk-trace-web": "^2.0.0",
     "@opentelemetry/sdk-trace-base": "^2.0.0",
@@ -61,8 +61,8 @@
     }
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "start": "GENERATE_SOURCEMAP=false react-app-rewired start",
+    "build": "GENERATE_SOURCEMAP=false react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
   },
