--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -24,5 +24,4 @@ USER appuser
 # Expose the application port
 EXPOSE 8000
 
-# Use gunicorn for better performance in production
-CMD ["gunicorn", "-k", "uvicorn.workers.UvicornWorker", "main:app", "--bind", "0.0.0.0:8000", "--workers", "2"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
