Update dockerfile gwy

--- a/docker-compose.external-es.yml
+++ b/docker-compose.external-es.yml
@@ -22,7 +22,7 @@ services:
   
   gateway:
     build: ./gateway
-    container_name: esda-gateway
+    container_name: gateway
     environment:
       - NODE_ENV=production
       - PORT=3100
