--- a/docker-compose.external-es.yml
+++ b/docker-compose.external-es.yml
@@ -18,9 +18,11 @@ services:
       - "8000:8000"
     networks:
       - app-network
-  
+
   gateway:
-    build: ./gateway
+    build: 
+      context: ./gateway
+      dockerfile: Dockerfile
     container_name: gateway
     environment:
       - NODE_ENV=production
