--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3100
-      - BACKEND_BASE_URL=http://backend:8000
+      - BACKEND_BASE_URL=http://backend:8000/api
       - OTEL_SERVICE_NAME=es-data-assistant-gateway
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318/v1/traces
     ports:
