--- a/docker-compose.external-es.yml
+++ b/docker-compose.external-es.yml
@@ -27,7 +27,7 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3100
-      - BACKEND_BASE_URL=http://backend:8000/api
+      - BACKEND_BASE_URL=http://backend:8000
       - OTEL_SERVICE_NAME=es-data-assistant-gateway
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318/v1/traces
     ports:
