--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -13,8 +13,9 @@ http {
   default_type  application/octet-stream;
 
   server {
-    listen 80;
+    listen 3000;
     server_name _;
+    server_tokens off;
 
     # Static files built by React
     root /usr/share/nginx/html;
