--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,4 +1,4 @@
-worker_processes auto;
+## worker_processes auto;
 
 events { worker_connections 1024; }
 
@@ -58,4 +58,11 @@ http {
       chunked_transfer_encoding on;
     }
   }
+  
+  # Enable gzip compression
+  gzip on;
+  gzip_vary on;
+  gzip_min_length 1024;
+  gzip_proxied expired no-cache no-store private auth;
+  gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/javascript;
 }
