--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -85,10 +85,35 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
   }
 
-  # Enable gzip compression
-  gzip on;
-  gzip_vary on;
-  gzip_min_length 1024;
-  gzip_proxied expired no-cache no-store private auth;
-  gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/javascript;
+  # Proxy API to gateway; make it streaming-friendly
+  location /api/ {
+    proxy_pass http://gateway:3100/;
+    proxy_http_version 1.1;
+
+    # Keep-alive and correct headers for chunked streaming
+    proxy_set_header Connection "";
+    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+
+    # Disable proxy buffering so chunks flush immediately
+    proxy_buffering off;
+    proxy_request_buffering off;
+
+    # Allow long-lived streaming responses
+    proxy_read_timeout 3600s;
+    proxy_send_timeout 3600s;
+    proxy_connect_timeout 75s;
+
+    # Tell Nginx not to buffer at all (esp. in some deployments)
+    add_header X-Accel-Buffering no;
+
+    # Prevent caching for streaming endpoints
+    add_header Cache-Control "no-cache, no-store, must-revalidate";
+    add_header Pragma "no-cache";
+    add_header Expires "0";
+
+    # Ensure chunked transfer is ok
+    chunked_transfer_encoding on;
+  }
 }
