--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -116,4 +116,28 @@ server {
     # Ensure chunked transfer is ok
     chunked_transfer_encoding on;
   }
+
+  location /v1/traces {
+    proxy_pass http://otel-collector:4318;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+  location /v1/metrics {
+    proxy_pass http://otel-collector:4318;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+  location /v1/logs {
+    proxy_pass http://otel-collector:4318;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
 }
