--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -87,7 +87,7 @@ server {
 
   # Proxy API to gateway; make it streaming-friendly
   location /api/ {
-    proxy_pass http://gateway:3100/;
+    proxy_pass http://gateway:3100/api/;
     proxy_http_version 1.1;
 
     # Keep-alive and correct headers for chunked streaming
