--- a/gateway/package.json
+++ b/gateway/package.json
@@ -9,6 +9,7 @@
     "test": "node -e \"console.log('no tests yet')\""
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.49.1",
     "@opentelemetry/exporter-trace-otlp-grpc": "^0.55.0",
