--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -87,7 +87,17 @@ server {
 
   # Proxy API to gateway; make it streaming-friendly
   location /api/ {
-    proxy_pass http://gateway:3100/api/;
+    proxy_pass http://gateway:3100;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+  # Proxy API to gateway; make it streaming-friendly
+  location /api/chat {
+    proxy_pass http://gateway:3100/api/chat;
     proxy_http_version 1.1;
 
     # Keep-alive and correct headers for chunked streaming
