--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -32,7 +32,7 @@ server {
 
   # Proxy API to gateway; make it streaming-friendly
   location /api/chat {
-    proxy_pass http://gateway:3100/api/chat;
+    proxy_pass http://gateway:3100;
     proxy_http_version 1.1;
 
     # Keep-alive and correct headers for chunked streaming
