--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,7 +2,7 @@
 # This file should only contain server block configuration
 
 server {
-  listen 3000;
+  listen 3000 http2;
   server_name _;
   server_tokens off;
 
@@ -33,7 +33,6 @@ server {
   # Proxy API to gateway; make it streaming-friendly
   location /api/chat {
     proxy_pass http://gateway:3100;
-    proxy_http_version 1.1;
 
     # Keep-alive and correct headers for chunked streaming
     proxy_set_header Connection "";
