--- a/gateway/package.json
+++ b/gateway/package.json
@@ -6,7 +6,10 @@
     "dev": "node --watch src/server.js",
     "start": "node src/server.js",
     "lint": "eslint .",
-    "test": "node -e \"console.log('no tests yet')\""
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest --coverage",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "compression": "^1.7.4",
@@ -14,8 +17,10 @@
     "@opentelemetry/auto-instrumentations-node": "^0.49.1",
     "@opentelemetry/exporter-trace-otlp-grpc": "^0.55.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.55.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.55.0",
     "@opentelemetry/resources": "^1.9.0",
     "@opentelemetry/sdk-node": "^0.55.0",
+    "@opentelemetry/sdk-metrics": "^1.26.0",
     "@opentelemetry/semantic-conventions": "^1.25.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -25,6 +30,10 @@
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
-    "eslint": "^9.9.0"
+    "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/ui": "^1.6.0",
+    "eslint": "^9.9.0",
+    "supertest": "^6.3.4",
+    "vitest": "^1.6.0"
   }
 }
