--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,3 @@
 REACT_APP_OTEL_METRIC_ENDPOINT=http://otel-collector:4318/v1/metrics
 REACT_APP_OTEL_TRACE_ENDPOINT=http://otel-collector:4318/v1/traces
+OTEL_SEMCONV_STABILITY_OPT_IN=http
