Adrianau es patch 3 - Improve traceability and optimise separation (#5)
* Update otel config

* Remove deprecated exporter

* CORS Config update

* update nginx config

* update otel config

* update invalid processor

* update otel config

* Update mapping service logging

* update health check

* Update routes

* Update routes

* return response type

* Update routes

* Fix typo

* tweak health route

* Update query route

* update query span

* Update get indices

* Update instrumentation

* fix typo

* update dependencies

* Update dependencies

* update otel service name declaration

* Dependency update

* update dependencies

* Update dependency

* update dependency

* Update otel config

* Update ai service

* Update python instrumentation

* Update model declaration

* update template

* Update es trace

* Update auto instrumentation configuration

* Update otel endpoint

* Update env vars

* OTLP update

* Update dependency versions in package.json

* update env

* update node env example

* Update nginx config for otel endpoints

* Update backend

* Update instrumentation

* update dependency version

* update dependency

* update tailwind config

* update tailwind

* update tailwind

* modified:   frontend/tailwind.config.js

* Update instrumentation

* Include webpack config

* update webpack cof

* Update config

* update build

* update dependency

* Update depdency

* update dependency

* update dependency

* Update dependency versions in the package.json file

* update dependency

* update dependency

* update dependencies

* Update dependencies

* Update dependencies

* Dependency update

* dependency udpate

* version update

* dependency update

* Update dependencies

* dependency update

* Dependency update

* Update dependency

* Update frontend instrumentation

* Update packaged

* Remove deprecated package and update tracing

* update dependency

* Update instrumentation for async es

* update frontend trace config

* Update dependency

* Upda

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,12 @@
-FROM node:18-alpine as builder
+## Frontend
+FROM node:20-alpine as builder
 
 WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
-RUN npm install
+#RUN npm install -D compression-webpack-plugin terser-webpack-plugin
+RUN npm install -D compression-webpack-plugin
 
 # Copy source code
 COPY . .
