--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,15 +1,23 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-elasticsearch==8.11.0
-openai==1.3.5
-pydantic==2.5.0
-python-multipart==0.0.6
-python-dotenv==1.0.0
+gunicorn==21.2.0
+openai==1.99.1
+aiohttp==3.12.15
+python-multipart==0.0.20
+python-dotenv==1.0.1
 httpx==0.25.2
-opentelemetry-api==1.21.0
-opentelemetry-sdk==1.21.0
-opentelemetry-exporter-otlp==1.21.0
-opentelemetry-instrumentation-fastapi==0.42b0
-opentelemetry-instrumentation-elasticsearch==0.42b0
-opentelemetry-instrumentation-httpx==0.42b0
+opentelemetry-api==1.36.0
+opentelemetry-sdk==1.36.0
+opentelemetry-exporter-otlp==1.36.0
+opentelemetry-instrumentation==0.57b0
+opentelemetry-instrumentation-openai-v2==2.1b0
+opentelemetry-instrumentation-fastapi==0.57b0
+opentelemetry-instrumentation-elasticsearch==0.57b0
+opentelemetry-instrumentation-httpx==0.57b0
+opentelemetry-semantic-conventions==0.57b0
+opentelemetry-instrumentation-requests==0.57b0
+opentelemetry-util-http==0.57b0
 APScheduler==3.10.4
+pydantic_settings==2.10.1
+fastapi==0.111.0
+uvicorn[standard]==0.30.1
+elasticsearch[async]==8.13.2
+tiktoken>=0.7.0
