--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,24 +1,87 @@
+# Mapped as /etc/nginx/conf.d/default.conf
+# This file should only contain server block configuration
+
 server {
-    listen 3000;
-    root /usr/share/nginx/html;
-    index index.html index.htm;
+  listen 3000 http2;
+  server_name _;
+  server_tokens off;
 
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
+  # Static files built by React
+  root /usr/share/nginx/html;
+  index index.html;
 
-    location /api {
-        proxy_pass http://backend:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
+  # Serve app
+  location / {
+    try_files $uri /index.html;
     # Enable gzip compression
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
-    gzip_proxied expired no-cache no-store private must-revalidate auth;
+    gzip_proxied expired no-cache no-store private auth;
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/javascript;
+  }
+
+  location /api/ {
+    proxy_pass http://gateway:3100;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+  # Proxy API to gateway; make it streaming-friendly
+  location /api/chat {
+    proxy_pass http://gateway:3100;
+
+    # Keep-alive and correct headers for chunked streaming
+    proxy_set_header Connection "";
+    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+
+    # Disable proxy buffering so chunks flush immediately
+    proxy_buffering off;
+    proxy_request_buffering off;
+
+    # Allow long-lived streaming responses
+    proxy_read_timeout 3600s;
+    proxy_send_timeout 3600s;
+    proxy_connect_timeout 75s;
+
+    # Tell Nginx not to buffer at all (esp. in some deployments)
+    add_header X-Accel-Buffering no;
+
+    # Prevent caching for streaming endpoints
+    add_header Cache-Control "no-cache, no-store, must-revalidate";
+    add_header Pragma "no-cache";
+    add_header Expires "0";
+
+    # Ensure chunked transfer is ok
+    chunked_transfer_encoding on;
+  }
+
+  location /v1/traces {
+    proxy_pass http://otel-collector:4318;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+  location /v1/metrics {
+    proxy_pass http://otel-collector:4318;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+  location /v1/logs {
+    proxy_pass http://otel-collector:4318;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
 }
