Selector & chat update v1.1 - GPT5

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,56 +3,58 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@babel/parser": "^7.22.0",
+    "@opentelemetry/api": "^1.7.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.62.0",
+    "@opentelemetry/auto-instrumentations-web": "^0.48.0",
+    "@opentelemetry/context-zone": "^2.0.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.200.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.200.0",
+    "@opentelemetry/host-metrics": "^0.32.0",
+    "@opentelemetry/instrumentation": "^0.200.0",
+    "@opentelemetry/instrumentation-document-load": "^0.48.0",
+    "@opentelemetry/instrumentation-fetch": "^0.200.0",
+    "@opentelemetry/instrumentation-user-interaction": "^0.48.0",
+    "@opentelemetry/instrumentation-xml-http-request": "^0.200.0",
+    "@opentelemetry/propagator-b3": "^2.0.0",
+    "@opentelemetry/resource-detector-container": "^0.7.0",
+    "@opentelemetry/resources": "^2.0.0",
+    "@opentelemetry/sdk-logs": "^0.203.0",
+    "@opentelemetry/sdk-metrics": "^2.0.0",
+    "@opentelemetry/sdk-trace-base": "^2.0.0",
+    "@opentelemetry/sdk-trace-web": "^2.0.0",
+    "@opentelemetry/semantic-conventions": "^1.36.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "acorn": "^8.12.0",
     "assert": "^2.0.0",
-    "https-browserify": "^1.0.0",
-    "path-browserify": "^1.0.1",
-    "url": "^0.11.0",
-    "util": "^0.12.5",
-    "timers-browserify": "^2.0.12",
-    "console-browserify": "^1.2.0",
+    "autoprefixer": "^10.4.14",
+    "axios": "^1.6.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
-    "process":"0.11.10",
+    "console-browserify": "^1.2.0",
     "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "lucide-react": "^0.263.1",
+    "path-browserify": "^1.0.1",
+    "postcss": "^8.4.24",
+    "process": "0.11.10",
+    "querystring-es3": "^0.2.1",
+    "react": "^18.2.0",
+    "react-app-rewired": "^2.1.9",
+    "react-dom": "^18.2.0",
+    "react-json-view": "^1.21.3",
+    "react-json-view-lite": "^2.4.2",
+    "react-scripts": "5.0.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "querystring-es3": "^0.2.1",
-    "react-app-rewired": "^2.1.9",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "axios": "^1.6.0",
-    "react-json-view": "^1.21.3",
-    "@opentelemetry/host-metrics": "^0.32.0",
-    "@opentelemetry/resource-detector-container": "^0.7.0",
-    "@opentelemetry/api": "^1.7.0",
-    "@opentelemetry/resources": "^2.0.0",
-    "@opentelemetry/sdk-trace-web": "^2.0.0",
-    "@opentelemetry/sdk-trace-base": "^2.0.0",
-    "@opentelemetry/sdk-metrics": "^2.0.0",
-    "@opentelemetry/propagator-b3": "^2.0.0",
-    "@opentelemetry/context-zone": "^2.0.0",
-    "@opentelemetry/semantic-conventions": "^1.36.0",
-    "@opentelemetry/sdk-logs": "^0.203.0",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.200.0",
-    "@opentelemetry/exporter-metrics-otlp-http": "^0.200.0",
-    "@opentelemetry/instrumentation": "^0.200.0",
-    "@opentelemetry/instrumentation-fetch": "^0.200.0",
-    "@opentelemetry/instrumentation-xml-http-request": "^0.200.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.62.0",
-    "@opentelemetry/auto-instrumentations-web": "^0.48.0",
-    "@opentelemetry/instrumentation-document-load": "^0.48.0",
-    "@opentelemetry/instrumentation-user-interaction": "^0.48.0",
-    "lucide-react": "^0.263.1",
     "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.14",
-    "react-json-view-lite": "^2.4.2",
-    "postcss": "^8.4.24"
+    "timers-browserify": "^2.0.12",
+    "url": "^0.11.0",
+    "util": "^0.12.5"
   },
-    "overrides": {
+  "overrides": {
     "react-json-view": {
       "react": "$react",
       "react-dom": "$react-dom"
@@ -60,7 +62,7 @@
   },
   "scripts": {
     "start": "GENERATE_SOURCEMAP=false react-app-rewired start",
-    "build": "GENERATE_SOURCEMAP=false react-app-rewired build", 
+    "build": "GENERATE_SOURCEMAP=false react-app-rewired build",
     "test": "vitest",
     "test:watch": "vitest --watch",
     "test:coverage": "vitest --coverage",
