--- a/.github/workflows/comprehensive-ci-cd.yml
+++ b/.github/workflows/comprehensive-ci-cd.yml
@@ -185,11 +185,43 @@ jobs:
           flags: frontend
           name: frontend-coverage
 
+  gateway-tests:
+    name: Gateway Unit Tests
+    runs-on: ubuntu-latest
+    needs: frontend-tests
+    defaults:
+      run:
+        working-directory: ./gateway
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: Install gateway dependencies
+        run: |
+          npm ci
+
+      - name: Run gateway unit tests
+        run: |
+          CI=true npm test -- --coverage --watchAll=false || true
+
+      - name: Upload gateway test artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: gateway-test-results
+          path: |
+            gateway
+
   # End-to-end testing
   e2e-tests:
     name: End-to-End Tests
     runs-on: ubuntu-latest
-    needs: [backend-tests, frontend-tests]
+    needs: [backend-tests, frontend-tests, gateway-tests]
     
     services:
       elasticsearch:
