--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -21,142 +21,9 @@ server {
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/javascript;
   }
 
-  location /api/ {
-    proxy_pass http://gateway:3100;
-    proxy_http_version 1.1;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-  }
-
-  # Proxy API to gateway; make it streaming-friendly
-  location /api/chat {
-    proxy_pass http://gateway:3100;
-<<<<<<< HEAD
-
-    # Keep-alive and correct headers for chunked streaming
-    proxy_set_header Connection "";
-    proxy_set_header Host $host;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-
-    # Disable proxy buffering so chunks flush immediately
-    proxy_buffering off;
-    proxy_request_buffering off;
-
-    # Allow long-lived streaming responses
-    proxy_read_timeout 3600s;
-    proxy_send_timeout 3600s;
-    proxy_connect_timeout 75s;
-
-    # Tell Nginx not to buffer at all (esp. in some deployments)
-    add_header X-Accel-Buffering no;
-
-    # Prevent caching for streaming endpoints
-    add_header Cache-Control "no-cache, no-store, must-revalidate";
-    add_header Pragma "no-cache";
-    add_header Expires "0";
-
-    # Ensure chunked transfer is ok
-    chunked_transfer_encoding on;
-  }
-
-  location /v1/traces {
-    proxy_pass http://otel-collector:4318;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-  }
-
-  location /v1/metrics {
-    proxy_pass http://otel-collector:4318;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-  }
-
-  location /v1/logs {
-    proxy_pass http://otel-collector:4318;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-  }
-
-  # Proxy API to gateway; make it streaming-friendly
-  location /api/ {
-    proxy_pass http://gateway:3100;
-    proxy_http_version 1.1;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-  }
-
-  # Proxy API to gateway; make it streaming-friendly
-  location /api/chat {
-    proxy_pass http://gateway:3100/api/chat;
-    proxy_http_version 1.1;
-=======
->>>>>>> 12ab494 (Update mapping service to improve tracing)
-
-    # Keep-alive and correct headers for chunked streaming
-    proxy_set_header Connection "";
-    proxy_set_header Host $host;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-
-    # Disable proxy buffering so chunks flush immediately
-    proxy_buffering off;
-    proxy_request_buffering off;
-
-    # Allow long-lived streaming responses
-    proxy_read_timeout 3600s;
-    proxy_send_timeout 3600s;
-    proxy_connect_timeout 75s;
-
-    # Tell Nginx not to buffer at all (esp. in some deployments)
-    add_header X-Accel-Buffering no;
-
-    # Prevent caching for streaming endpoints
-    add_header Cache-Control "no-cache, no-store, must-revalidate";
-    add_header Pragma "no-cache";
-    add_header Expires "0";
-
-    # Ensure chunked transfer is ok
-    chunked_transfer_encoding on;
-  }
-
-  location /v1/traces {
-    proxy_pass http://otel-collector:4318;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-  }
-
-  location /v1/metrics {
-    proxy_pass http://otel-collector:4318;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-  }
-
-  location /v1/logs {
-    proxy_pass http://otel-collector:4318;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-  }
-  }
-
-  location /api/ {
-    proxy_pass http://gateway:3100;
+  # Match /api/* except /api/chat and strip the /api prefix when proxying
+  location ~ ^/api/(?!chat)(.*)$ {
+    proxy_pass http://gateway:3100/$1;
     proxy_http_version 1.1;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
@@ -218,4 +85,5 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
   }
+
 }
