--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,8 +32,8 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-  - elasticsearch
-  - redis
+      - elasticsearch
+      - redis
     networks:
       - app-network
 
@@ -68,6 +68,8 @@ services:
       - REACT_APP_OTEL_TRACE_ENDPOINT=${REACT_APP_OTEL_TRACE_ENDPOINT:-http://otel-collector:4318/v1/traces}
     ports:
       - "3000:3000"
+    depends_on:
+      - gateway
     networks:
       - app-network
 
