--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -23,7 +23,7 @@ server {
 
   # Match /api/* except /api/chat and strip the /api prefix when proxying
   location ~ ^/api/(?!chat)(.*)$ {
-    proxy_pass http://gateway:3100/$1;
+    proxy_pass http://gateway:3100/api/$1;
     proxy_http_version 1.1;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
