Update to use EDOT

--- a/.env.external-es.example
+++ b/.env.external-es.example
@@ -11,3 +11,13 @@ OTEL_SERVICE_NAME=elasticsearch-ai-backend
 OTEL_COLLECTOR_EXPORTER_OTLP=http://localhost:8200
 OTEL_EXPORTER_OTLP_HEADERS=Authorization=Bearer somesecret
 MAPPING_CACHE_INTERVAL_MINUTES=30
+ELASTIC_APM_SECRET_TOKEN=your_elastic_apm_secret_token
+
+## Otel Collector config
+HOST_FILESYSTEM=/
+DOCKER_SOCK=/var/run/docker.sock
+ELASTIC_AGENT_OTEL=true
+COLLECTOR_CONTRIB_IMAGE=elastic/elastic-agent:9.1.2
+ELASTIC_API_KEY=<your_api_key_here>
+ELASTIC_ENDPOINT=<your_endpoint_here>
+OTEL_COLLECTOR_CONFIG=./otel-es-config.yaml
