--- a/otel-es-config.yaml
+++ b/otel-es-config.yaml
@@ -36,8 +36,9 @@ processors:
     timeout: 1s
     send_batch_max_size: 1500
   batch/metrics:
-    send_batch_max_size: 3000
+    send_batch_size: 1000
     timeout: 1s
+    send_batch_max_size: 3000
   elastictrace: {}
 
 exporters:
